--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,7 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 monitor_speed = 115200
-lib_deps = knolleary/PubSubClient@^2.8
-
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.2.1
+	waspinator/AccelStepper@^1.64
